@@ -1,0 +1,89 @@
+:
+# Script to do some testing of various transformations depending on datum
+# files that are not always available.
+#
+#
+EXE=$1
+
+usage()
+{
+    echo "Usage: ${0} <path to 'cs2cs' program>" 
+    echo
+    exit 1
+}
+
+if test -z "${EXE}"; then
+    echo "*** ERROR: Missing path to 'cs2cs' program."
+    usage
+else
+    if test ! -x ${EXE}; then
+        echo "*** ERROR: Can not find '${EXE}' program!"
+        exit 1
+    fi
+fi
+
+echo "============================================"
+echo "Running ${0} using ${EXE}:"
+echo "============================================"
+
+OUT=td_out
+#EXE=../src/cs2cs
+#
+echo "doing tests into file ${OUT}, please wait"
+rm -f ${OUT}
+#
+echo "##############################################################" >> ${OUT}
+echo 1st through ntv1, 2nd through conus >> ${OUT}
+#
+$EXE +proj=latlong +ellps=clrk66 +nadgrids=ntv1_can.dat,conus \
+ +to +proj=latlong +datum=NAD83 \
+ -E >>${OUT} <<EOF
+111d00'00.000"W 44d00'00.000"N 0.0
+111d00'00.000"W 39d00'00.000"N 0.0
+EOF
+
+echo "##############################################################" >> ${OUT}
+echo As above, but without ntv1 everything goes through conus file. >> ${OUT}
+#
+$EXE +proj=latlong +ellps=clrk66 +nadgrids=conus \
+ +to +proj=latlong +datum=NAD83 \
+ -E >>${OUT} <<EOF
+111d00'00.000"W 44d00'00.000"N 0.0
+111d00'00.000"W 39d00'00.000"N 0.0
+EOF
+
+echo "##############################################################" >> ${OUT}
+echo Test MD used where available >> ${OUT}
+#
+$EXE +proj=latlong +ellps=clrk66 +nadgrids=MD,conus \
+ +to +proj=latlong +datum=NAD83 \
+ -E >>${OUT} <<EOF
+79d58'00.000"W 37d02'00.000"N 0.0
+79d58'00.000"W 36d58'00.000"N 0.0
+EOF
+#
+$EXE +proj=latlong +ellps=clrk66 +nadgrids=conus \
+ +to +proj=latlong +datum=NAD83 \
+ -E >>${OUT} <<EOF
+79d58'00.000"W 37d02'00.000"N 0.0
+79d58'00.000"W 36d58'00.000"N 0.0
+EOF
+#
+##############################################################################
+# Done! 
+# do 'diff' with distribution results
+echo "diff ${OUT} with ${OUT}.dist"
+diff -b ${OUT} ${OUT}.dist
+if [ $? -ne 0 ] ; then
+	echo  ""
+	echo "PROBLEMS HAVE OCCURED"
+	echo "test file ${OUT} saved"
+    echo
+	exit 100
+else
+	echo "TEST OK"
+	echo "test file ${OUT} removed"
+    echo
+	/bin/rm -f ${OUT}
+	exit 0
+fi
